--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!doctype html>
 <html>
-<title>Resumes by Craig</title>
+  <head>
+      <title>Resumes by Craig!</title>
+      <link href="<link href="https://fonts.googleapis.com/css?family=Bevan|Chakra+Petch" rel="stylesheet">
+      <link href="style.css" rel="stylesheet" />
+  </head>
   <body>
-    <head>
-
-    </head>
-    <nav>
-
-  </nav>
-
-    <footer>
-
-    </footer>
-
+    <div id="container"
+      <header>
+        <h1>Resumes by Craig</h1>
+      </header>
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+      </ul>
+      </nav>
   </body>
+
 </html>
