--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
       <title>Resumes by Craig!</title>
-      <link href="<link href="https://fonts.googleapis.com/css?family=Bevan|Chakra+Petch" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Bevan|Chakra+Petch" rel="stylesheet">
       <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="container"
+    <div id="container">
       <header>
         <h1>Resumes by Craig</h1>
       </header>
@@ -26,6 +26,7 @@
           </li>
       </ul>
       </nav>
+    </div>
   </body>
 
 </html>
