--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
           <li>
             <a href="index.html">Home</a>
           </li>
+          <li>
+            <a href="https://www.google.com/search?q=resume+examples&rlz=1C1CHBF_enUS818US818&source=lnms&tbm=isch&sa=X&sqi=2&ved=0ahUKEwi_rMWtp4TeAhVMPY8KHWmsAxwQ_AUIDigB&biw=1342&bih=620">Gallery</a>
+          </li>
+          <li>
+            <a href="https://www.myperfectresume.com/resume-templates">Templates</a>
+
+          </li>
+          <li>
+            <a href="tel:3195551212">Contact Us</a>
+          </li>
       </ul>
       </nav>
     </div>
