--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       <nav>
         <ul>
           <li>
-            <a href="index.html">Home</a>
+            <a href="index.html">Ross</a>
+          </li>
+          <li>
+            <a href="sarah.html">Sarah</a>
           </li>
           <li>
             <a href="https://www.google.com/search?q=resume+examples&rlz=1C1CHBF_enUS818US818&source=lnms&tbm=isch&sa=X&sqi=2&ved=0ahUKEwi_rMWtp4TeAhVMPY8KHWmsAxwQ_AUIDigB&biw=1342&bih=620">Gallery</a>
