--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
       </ul>
       </nav>
     </div>
+    <main>
+      <h2>Ross McDonald</h2>
+      <img alt="resume" src="images/canva-dark-blue-professional-resume-MAB5U1TL5BM.jpg"/>
+
+        <div id="container1">
+          <h3>Objective</h3>
+      </div>
+
+    </main>
   </body>
 
 </html>
