--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
 
         <div id="container1">
           <h3>Objective</h3>
+          <p>
+            Writing the perfect resume has never been easier
+Our easy-to-use resume builder helps you create a personalized resume that highlights your unique skills, experience, and accomplishments. First, tell us about yourself. We use this information to deliver specific phrases and suggestions to make your resume shine. Also, we guide you step-by-step through each section, so you get the help you deserve from start to finish.
+          </p>
+          <h4>Experience</h4>
+            <ul>
+              <li>
+                lkasjdfl;askdjf
+              </li>
+              <li>
+                ;laksdjf;laksjdf;lkjasdf;l
+              </li>
+            </ul>
       </div>
 
     </main>
